--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="upload.png" alt="">
             <img src="more.png" alt="">
             
-            <img src="/notification.png" alt="">
+            <img src="notification.png" alt="">
             <img src="Jack.png" alt="" class="logo_icon">
 
         </div>
